<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/main"
        tools:context=".Activities.SetAlarmActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cream">

            <TextView
                android:id="@+id/alarmHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_alarm"
                android:textColor="@color/textColor"
                android:textSize="21sp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/fragment_createalarm_timePickerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/alarmHeading">

                <TimePicker
                    android:id="@+id/fragment_createalarm_timePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:timePickerMode="clock"/>
            </LinearLayout>

            <EditText
                android:id="@+id/fragment_createalarm_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/alarm_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/fragment_createalarm_timePickerLayout"
                tools:ignore="VisualLintTextFieldSize" />

            <CheckBox
                android:id="@+id/fragment_createalarm_recurring"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/recurring_alarm"
                android:textColor="@color/textColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_createalarm_title"
                tools:ignore="VisualLintButtonSize" />

            <HorizontalScrollView
                android:id="@+id/fragment_createalarm_recurring_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_createalarm_recurring"
                android:background="@color/twitter_blue">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/twitter_blue"
                    android:backgroundTint="@color/twitter_blue">

                    <ToggleButton
                        android:id="@+id/fragment_createalarm_checkMon"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:textOff="@string/mon"
                        android:textOn="@string/_mon"
                        android:textColor="@color/white"
                        android:layout_margin="3dp"
                        style="@style/toggleButton"
                        android:background="@drawable/toggle_bg"/>

                    <ToggleButton
                        android:id="@+id/fragment_createalarm_checkTue"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:textOff="@string/tue"
                        android:textOn="@string/tue"
                        android:textColor="@color/white"
                        android:layout_margin="3dp"
                        style="@style/toggleButton"
                        android:background="@drawable/toggle_bg"/>

                    <ToggleButton
                        android:id="@+id/fragment_createalarm_checkWed"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:textOff="@string/wed"
                        android:textOn="@string/wed"
                        android:textColor="@color/white"
                        android:layout_margin="3dp"
                        style="@style/toggleButton"
                        android:background="@drawable/toggle_bg"/>

                    <ToggleButton
                        android:id="@+id/fragment_createalarm_checkThu"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:textOff="@string/thu"
                        android:textOn="@string/thu"
                        android:textColor="@color/white"
                        android:layout_margin="3dp"
                        style="@style/toggleButton"
                        android:background="@drawable/toggle_bg"/>

                    <ToggleButton
                        android:id="@+id/fragment_createalarm_checkFri"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:textOff="@string/fri"
                        android:textOn="@string/fri"
                        android:textColor="@color/white"
                        android:layout_margin="3dp"
                        style="@style/toggleButton"
                        android:background="@drawable/toggle_bg"/>

                    <ToggleButton
                        android:id="@+id/fragment_createalarm_checkSat"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:textOff="@string/sat"
                        android:textOn="@string/sat"
                        android:textColor="@color/white"
                        android:layout_margin="3dp"
                        style="@style/toggleButton"
                        android:background="@drawable/toggle_bg"/>

                    <ToggleButton
                        android:id="@+id/fragment_createalarm_checkSun"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:textOff="@string/sun"
                        android:textOn="@string/sun"
                        android:textColor="@color/white"
                        android:layout_margin="3dp"
                        style="@style/toggleButton"
                        android:background="@drawable/toggle_bg"/>
                </LinearLayout>
            </HorizontalScrollView>

            <androidx.cardview.widget.CardView
                android:id="@+id/fragment_createalarm_card_sound"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="18dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_createalarm_recurring_options"
                tools:ignore="TextSizeCheck">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/fragment_createalarm_sound"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/fragment_createalarm_setTone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="@string/alarm_ringtone"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/black"
                        android:textSize="21sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="0dp" />

                    <TextView
                        android:id="@+id/fragment_createalarm_setToneName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="@string/ringtone"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/textColor"
                        android:textSize="13sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/fragment_createalarm_setTone"
                        tools:layout_editor_absoluteX="0dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:id="@+id/fragment_createalarm_card_vibrate"
                android:layout_marginTop="18dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="6dp"
                app:layout_constraintTop_toBottomOf="@+id/fragment_createalarm_card_sound"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/fragment_createalarm_vibrate">
                    <TextView
                        android:id="@+id/fragment_createalarm_vibrateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vibrate"
                        android:textSize="21sp"
                        android:textColor="@color/textColor"
                        android:layout_margin="6dp"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        tools:layout_editor_absoluteX="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Switch
                        android:id="@+id/fragment_createalarm_vibrate_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="3dp"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/fragment_createalarm_scheduleAlarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="27dp"
                android:background="@drawable/shape_oval_filled"
                android:fontFamily="monospace"
                android:text="@string/schedule_alarm"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_createalarm_card_vibrate"
                tools:ignore="VisualLintButtonSize" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>
