<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/light_blue"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.RingActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ring_ring"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#283593"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/activity_ring_clock"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@+id/activity_ring_dismiss"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/baseline_access_alarm_24"
            tools:ignore="ImageContrastCheck" />

        <Button
            android:id="@+id/activity_ring_dismiss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dismiss"
            android:layout_marginBottom="7dp"
            android:textColor="@color/white"
            android:background="@color/translucent_grey"
            app:layout_constraintBottom_toTopOf="@+id/activity_ring_snooze"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/activity_ring_snooze"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:background="@color/cream"
            android:text="@string/snooze"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="VisualLintButtonSize" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
