<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            app:cardElevation="6dp"
            android:layout_margin="7dp"
            app:cardBackgroundColor="@color/cream">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="6dp">

                <TextView
                    android:id="@+id/item_alarm_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/_00_00"
                    android:textSize="36sp"
                    android:typeface="serif" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_alarm_recurring"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/alarm_repeat" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_margin="2dp">

                    <TextView
                        android:id="@+id/item_alarm_recurringDays"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        tools:text="Repeating"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/item_alarm_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textSize="16sp"
                        tools:text="Alarm Title" />

                </LinearLayout>
                <TextView
                    android:id="@+id/item_alarm_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:layout_marginStart="4dp"
                    android:textSize="14sp"/>

                <Switch
                    android:id="@+id/item_alarm_started"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="3dp"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <ImageButton
                    android:id="@+id/item_alarm_recurring_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/baseline_delete_forever_24"
                    android:contentDescription="@string/delete_alarm"
                    tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>

